[package]
name = "passwordless-passwords-prf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["AuthenticatorAssertionResponse", "AuthenticatorAttestationResponse", "AuthenticatorResponse", "CredentialCreationOptions", "CredentialRequestOptions", "CredentialsContainer", "Navigator", "PublicKeyCredential", "PublicKeyCredentialCreationOptions", "PublicKeyCredentialDescriptor", "PublicKeyCredentialParameters", "PublicKeyCredentialRequestOptions", "PublicKeyCredentialRpEntity", "PublicKeyCredentialType", "PublicKeyCredentialUserEntity", "console"] }
yew = { version = "0.20.0", features = ["csr"] }
