[package]
name = "passwordless-passwords-prf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.61"
stylist = { version = "0.12.0", features = ["macros", "yew_integration"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["AuthenticatorAssertionResponse", "AuthenticatorAttestationResponse", "AuthenticatorResponse", "CredentialCreationOptions", "CredentialRequestOptions", "CredentialsContainer", "DomException", "Navigator", "PublicKeyCredential", "PublicKeyCredentialCreationOptions", "PublicKeyCredentialDescriptor", "PublicKeyCredentialParameters", "PublicKeyCredentialRequestOptions", "PublicKeyCredentialRpEntity", "PublicKeyCredentialType", "PublicKeyCredentialUserEntity", "console"] }
yew = { version = "0.20.0", features = ["csr"] }
