[package]
name = "passwordless-passwords-prf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
js-sys = "0.3.61"
pkcs8 = { version = "0.9.0", features = ["alloc"] }
sec1 = { version = "0.3.0", features = ["der"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.93"
stylist = { version = "0.12.0", features = ["macros", "yew_integration"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["AesGcmParams", "AesKeyGenParams", "AuthenticationExtensionsClientInputs", "AuthenticationExtensionsClientOutputs", "AuthenticatorAssertionResponse", "AuthenticatorAttestationResponse", "AuthenticatorResponse", "CredentialCreationOptions", "CredentialRequestOptions", "CredentialsContainer", "Crypto", "CryptoKey", "DomException", "EcKeyImportParams", "EcdhKeyDeriveParams", "HkdfParams", "HtmlTextAreaElement", "Navigator", "PublicKeyCredential", "PublicKeyCredentialCreationOptions", "PublicKeyCredentialDescriptor", "PublicKeyCredentialParameters", "PublicKeyCredentialRequestOptions", "PublicKeyCredentialRpEntity", "PublicKeyCredentialType", "PublicKeyCredentialUserEntity", "StorageEvent", "SubtleCrypto", "console"] }
yew = { version = "0.20.0", features = ["csr"] }
